# git-Sentry

./: README.md
Git-Sentry/: 00_START_HERE.md  COMPLETION.md  INDEX.md  MANIFEST.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  _START_HERE_FIRST.md
Git-Sentry/bio-git/: Cargo.toml  README.md
Git-Sentry/bio-git/src/: biometric.rs  credential_helper.rs  keyring_mgr.rs  main.rs
Git-Sentry/examples/: bio-git-config.md  git-sentry-config.md
Git-Sentry/git-sentry/: Cargo.toml  README.md
Git-Sentry/git-sentry/src/: daemon.rs  main.rs  proxy.rs  ssh_protocol.rs  telegram.rs
