[package]
name = "bio-git"
version = "0.1.0"
edition = "2021"
description = "Git credential helper with biometric verification"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
keyring = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials",
    "Win32_Foundation",
    "Win32_Security"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
core-foundation = "0.10"
local-auth = "0.1"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "git-credential-bio"
path = "src/main.rs"
