[package]
name = "git-sentry"
version = "0.1.0"
edition = "2021"
description = "SSH Agent proxy with out-of-band 2FA via Telegram"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
hex = "0.4"

[target.'cfg(unix)'.dependencies]
unix-socket = "0.14"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "git-sentry"
path = "src/main.rs"
